--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <section id="main">
       <section id="hero">
         <div class="topnav">
-          <a href="#home" class="active"
+          <a href="#hero" class="active"
             ><div id="div-logo-mobile">
               <img id="logo" src="assets/logo.png" alt="" /></div
           ></a>
           <div id="myLinks">
-            <a href="#news">Home</a>
-            <a href="#contact">Sobre</a>
-            <a href="#about">Serviços</a>
-            <a href="#about">Clientes</a>
+            <a href="#hero">Home</a>
+            <a href="#about">Sobre</a>
+            <a href="#services">Serviços</a>
+            <a href="#infinity-carroussel-section">Clientes</a>
+            <a href="#forms-section">Fale com a gente</a>
           </div>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -38,8 +39,8 @@
               <ul id="menu">
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Clientes</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#infinity-carroussel-section">Clientes</a></li>
               </ul>
             </div>
             <div id="btn-whatsapp-menu">
