--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Postop</title>
   </head>
   <body>
     <section id="main">
